--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "vercel": "^39.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
